# esp-sdcard

./: Cargo.toml  Readme.md  diagram.json  wokwi.toml
.cargo/: config.toml
.github/: FUNDING.yml
.github/workflows/: rust_ci.yml
src/: main.rs
